simplifying the SavedSearch fifo